Compiler/src/main/java/Testing/Tests/SemanticTests/AST/failing/StartWithRet.ru
/? Descripción: caso donde se define metodo en start
/? Salida esperada:
/? ERROR: SEMANTICO - SENTENCIAS
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 10 | COLUMNA 2 | LLAMADA A MÉTODO DESDE START (START NO PUEDE TENER MÉTODOS)
start{
Int a;
ret a;
}